--- a/chatbot/chatbot.html
+++ b/chatbot/chatbot.html
@@ -5,7 +5,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="./chatbot/chatbot.css" />
+  <link rel="stylesheet" href="./chatbot.css" />
   <link rel="shortcut icon" href="./assets/logo-footer.png" type="image/x-icon">
 
   <meta charset="UTF-8" />
@@ -21,7 +21,7 @@
         <img src="./assets/logo-footer.png" alt="Logo" />
         <span id="titulo">Aqui é FURIA</span>
       </div>
-      <a href="./main/index.html"><button id="back-button">Voltar</button></a>
+      <a href="/index.html"><button id="back-button">Voltar</button></a>
     </header>
 
     <div id="chat-container">
@@ -48,7 +48,7 @@
     </div>
   </div>
 
-  <script src="./chatbot/chatbot.js"></script>
+  <script src="./chatbot.js"></script>
 </body>
 
 </html>
