--- a/chatbot/chatbot.html
+++ b/chatbot/chatbot.html
@@ -6,7 +6,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="./chatbot.css" />
-  <link rel="shortcut icon" href="./assets/logo-footer.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../assets/logo-footer.png" type="image/x-icon">
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,10 +18,10 @@
   <div class="wrapper">
     <header id="chat-header">
       <div id="header-left">
-        <img src="./assets/logo-footer.png" alt="Logo" />
+        <img src="../assets/logo-footer.png" alt="Logo" />
         <span id="titulo">Aqui é FURIA</span>
       </div>
-      <a href="/index.html"><button id="back-button">Voltar</button></a>
+      <a href="../index.html"><button id="back-button">Voltar</button></a>
     </header>
 
     <div id="chat-container">
