--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     </div>
   </section>
 
-  <section id="services">
+  <section id="cast">
     <div class="wrapper">
       <header>
         <h4>Elenco</h4>
@@ -223,7 +223,7 @@
     </div>
   </section>
 
-  <section id="contact">
+  <section id="fanzone">
     <div class="wrapper">
       <div class="col-a">
         <header>
