--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <div class="menu">
         <ul>
           <li><a onclick="closeMenu()" href="#home">Início</a></li>
-          <li><a onclick="closeMenu()" href="#services">Elenco</a></li>
+          <li><a onclick="closeMenu()" href="#cast">Elenco</a></li>
           <li><a onclick="closeMenu()" href="#about">Sobre</a></li>
-          <li><a onclick="closeMenu()" href="#contact">FanZone</a></li>
+          <li><a onclick="closeMenu()" href="#fanzone">FanZone</a></li>
         </ul>
 
         <a class="button" onclick="closeMenu()" href="https://www.furia.gg/" target="_blank"> LOJA OFICIAL</a>
